--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY='342s(s(!hsjd998sde8$=o4$3m!(o+kce2^97kp6#ujhi'
+SECRET_KEY='l97#!%3m226*_mpk0=+ol@5c67*&oj4%t5r%$g+2gm4hi-89h='
 DEBUG=True
 DB_NAME='instagram'
 DB_USER='mainas'
