add models and profile function

--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
 source virtual/bin/activate
-SECRET_KEY='l97#!%3m226*_mpk0=+ol@5c67*&oj4%t5r%$g+2gm4hi-89h='
-DEBUG=True
-DB_NAME='instagram'
-DB_USER='mainas'
-DB_PASSWORD='charity'
-DB_HOST='127.0.0.1'
-MODE='dev'
-ALLOWED_HOSTS='*'
+
+SECRET_KEY=bern.ice
+DEBUG=True 
+DB_NAME=instagram
+DB_USER=mainas
+DB_PASSWORD=charity
+DB_HOST=127.0.0.1
+MODE=dev
+ALLOWED_HOSTS=.localhost,.127.0.0.1
 DISABLE_COLLECTSTATIC=1
+CLOUD_NAME=milbem
+CLOUD_API=316365767174688
+API_SECRET=3jnx4oawODZWwZm4zTW19mmJlA8
